--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-sass": "^2.0.4"
+  },
+  "dependencies": {
+    "express": "^4.13.3",
+    "mongoose": "^4.1.10"
   }
 }
