Add 404 response to server.js

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/mollyfish/mean-stack-1#readme",
   "devDependencies": {
+    "express": "^4.13.3",
     "gulp": "^3.9.0",
     "gulp-sass": "^2.0.4"
   },
