--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "angular": "^1.4.7",
     "express": "^4.13.3",
-    "mongoose": "^4.1.10"
+    "gulp-express": "^0.3.5",
+    "mongoose": "^4.1.10",
+    "webpack": "^1.12.2"
   }
 }
