--- a/package.json
+++ b/package.json
@@ -20,13 +20,22 @@
   },
   "homepage": "https://github.com/mollyfish/mean-stack-1#readme",
   "devDependencies": {
-    "express": "^4.13.3",
     "gulp": "^3.9.0",
     "gulp-sass": "^2.0.4"
   },
   "dependencies": {
     "angular": "^1.4.7",
+    "angular-route": "^1.4.7",
+    "body-parser": "^1.14.1",
+    "connect-livereload": "^0.5.3",
     "express": "^4.13.3",
+    "gulp": "^3.9.0",
+    "gulp-express": "^0.3.5",
+    "gulp-jshint": "^1.11.2",
+    "gulp-livereload": "^3.8.1",
+    "gulp-sass": "^2.0.4",
+    "gulp-uglify": "^1.4.1",
+    "jshint-stylish": "^2.0.1",
     "mongoose": "^4.1.10",
     "webpack": "^1.12.2",
     "webpack-stream": "^2.1.1"
