--- a/package.json
+++ b/package.json
@@ -19,10 +19,6 @@
     "url": "https://github.com/mollyfish/mean-stack-1/issues"
   },
   "homepage": "https://github.com/mollyfish/mean-stack-1#readme",
-  "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-sass": "^2.0.4"
-  },
   "dependencies": {
     "angular": "^1.4.7",
     "angular-route": "^1.4.7",
@@ -30,13 +26,26 @@
     "connect-livereload": "^0.5.3",
     "express": "^4.13.3",
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.1.0",
+    "gulp-changed": "^1.1.1",
     "gulp-express": "^0.3.5",
+    "gulp-filesize": "0.0.6",
     "gulp-jshint": "^1.11.2",
     "gulp-livereload": "^3.8.1",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-notify": "^2.2.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.4",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.4.1",
+    "gulp-util": "^3.0.4",
     "jshint-stylish": "^2.0.1",
+    "lodash": "^3.3.1",
+    "merge-stream": "^0.1.7",
     "mongoose": "^4.1.10",
+    "pretty-hrtime": "~1.0.0",
+    "require-dir": "^0.3.0",
+    "vinyl-source-stream": "~1.0.0",
     "webpack": "^1.12.2",
     "webpack-stream": "^2.1.1"
   }
